# devpod

./: LICENSE  README.md  localinstall.sh  pyproject.toml
devpod/: buildconfig.template  console.py  containercompose.py  devcontainer.py
tests/: test_devpod.py
